ingress/wordpress.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wordpress
  labels: 
    app: wordpress
spec:
  ports: 
    - port: 80
  selector: 
    app: wordpress
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress
  labels: 
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy: 
    type: Recreate  
  template: 
    metadata: 
      labels:
        app: wordpress
        tier: frontend
    spec: 
      containers: 
      - image: wordpress:php7.2-apache
        name: wordpress
        ports: 
        - containerPort: 80
          name: wordpress
        volumeMounts: 
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
